--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,6 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-family: "Inter", Helvetica, sans-serif;
   box-sizing: border-box;
 }
